// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App / renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat cBZqYS"
    >
      <div
        class="sc-bxivhb hMnACT"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-ktHwxA bRARec"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-kafWEX hSEaCR"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-jTzLTM hPHXqn"
            />
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-iELTvK dsVrZo sc-kAzzGY bLtYsq"
                >
                  <div
                    class="bp3-input-group sc-chPdSV PhUsl"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <div
                    class="sc-feJyhm jdmEfO"
                  >
                    <label
                      for="auditMathType"
                    >
                      <p>
                        Ballot polling type
                      </p>
                      <div>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            checked=""
                            name="auditMathType"
                            type="radio"
                            value="BRAVO"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          BRAVO
                        </label>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            name="auditMathType"
                            type="radio"
                            value="MINERVA"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Minerva (Not recommended)
                        </label>
                      </div>
                    </label>
                  </div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-bwzfXH eBfcXh"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App / renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-heading"
          />
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat cBZqYS"
    >
      <div
        class="sc-bxivhb hMnACT"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-ktHwxA bRARec"
          >
            <div>
              <h2>
                Jurisdictions - 
                audit one
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-cIShpX iRnxMq"
                href="/election/1/jurisdiction/jurisdiction-id-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction One
                </span>
              </button>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-cIShpX iRnxMq"
                href="/election/1/jurisdiction/jurisdiction-id-3"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Three
                </span>
              </button>
            </div>
            <div>
              <h2>
                Jurisdictions - 
                audit two
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-cIShpX iRnxMq"
                href="/election/2/jurisdiction/jurisdiction-id-2"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Two
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App / renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-hEsumM cWAYk"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat cBZqYS"
    >
      <div
        class="sc-bxivhb hMnACT"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-ktHwxA bRARec"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-kafWEX hSEaCR"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-jTzLTM hPHXqn"
            />
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-iELTvK dsVrZo sc-kAzzGY bLtYsq"
                >
                  <div
                    class="bp3-input-group sc-chPdSV PhUsl"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <div
                    class="sc-feJyhm jdmEfO"
                  >
                    <label
                      for="auditMathType"
                    >
                      <p>
                        Ballot polling type
                      </p>
                      <div>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            checked=""
                            name="auditMathType"
                            type="radio"
                            value="BRAVO"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          BRAVO
                        </label>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            name="auditMathType"
                            type="radio"
                            value="MINERVA"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Minerva (Not recommended)
                        </label>
                      </div>
                    </label>
                  </div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-bwzfXH eBfcXh"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders ab logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat cBZqYS"
    >
      <div
        class="sc-bxivhb sc-tilXH daimQC"
      >
        <div
          class="board-table-container"
        >
          <h1
            class="bp3-heading"
          >
            Audit Board #1
            : Ballot Cards to Audit
          </h1>
          <p>
            The following ballots have been assigned to your audit board for this round of the audit. Once these ballots have been located and retrieved from storage, click "Start Auditing" to begin recording the votes you see marked on the paper ballots. When you are finished auditing these ballots, click "Auditing Complete - Submit Results" to submit the results.
             
            <strong>
              Note that you will not be able to make changes after results are submitted.
            </strong>
          </p>
          <div
            class="sc-cJSrbW jwTwUO"
          >
            <button
              class="bp3-button bp3-disabled"
              disabled=""
              href="/"
              tabindex="-1"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Start Auditing
              </span>
            </button>
            <button
              class="bp3-button"
              href="/election/1/audit-board/audit-board-1/signoff"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Auditing Complete - Submit Results
              </span>
            </button>
          </div>
          <table
            class="sc-hSdWYo iriXHx"
            role="table"
          >
            <thead>
              <tr>
                <th
                  colspan="1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Batch"
                >
                  <div
                    style="display: flex; align-items: center; padding-right: 15px;"
                  >
                    <span
                      style="margin-right: 5px;"
                    >
                      Batch
                    </span>
                    <span>
                      <span
                        class="bp3-icon bp3-icon-double-caret-vertical"
                        icon="double-caret-vertical"
                      >
                        <svg
                          data-icon="double-caret-vertical"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            double-caret-vertical
                          </desc>
                          <path
                            d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Ballot Position"
                >
                  <div
                    style="display: flex; align-items: center; padding-right: 15px;"
                  >
                    <span
                      style="margin-right: 5px;"
                    >
                      Ballot Position
                    </span>
                    <span>
                      <span
                        class="bp3-icon bp3-icon-double-caret-vertical"
                        icon="double-caret-vertical"
                      >
                        <svg
                          data-icon="double-caret-vertical"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            double-caret-vertical
                          </desc>
                          <path
                            d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </th>
                <th
                  colspan="1"
                  role="columnheader"
                  style="cursor: pointer;"
                  title="Status"
                >
                  <div
                    style="display: flex; align-items: center; padding-right: 15px;"
                  >
                    <span
                      style="margin-right: 5px;"
                    >
                      Status
                    </span>
                    <span>
                      <span
                        class="bp3-icon bp3-icon-double-caret-vertical"
                        icon="double-caret-vertical"
                      >
                        <svg
                          data-icon="double-caret-vertical"
                          height="16"
                          viewBox="0 0 16 16"
                          width="16"
                        >
                          <desc>
                            double-caret-vertical
                          </desc>
                          <path
                            d="M5 7h6a1.003 1.003 0 00.71-1.71l-3-3C8.53 2.11 8.28 2 8 2s-.53.11-.71.29l-3 3A1.003 1.003 0 005 7zm6 2H5a1.003 1.003 0 00-.71 1.71l3 3c.18.18.43.29.71.29s.53-.11.71-.29l3-3A1.003 1.003 0 0011 9z"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </span>
                    </span>
                  </div>
                </th>
              </tr>
            </thead>
            <tbody
              role="rowgroup"
            />
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-heading"
          />
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat cBZqYS"
    >
      <div
        class="sc-bxivhb hMnACT"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-ktHwxA bRARec"
          >
            <div>
              <h2>
                Jurisdictions - 
                audit one
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-cIShpX iRnxMq"
                href="/election/1/jurisdiction/jurisdiction-id-1"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction One
                </span>
              </button>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-cIShpX iRnxMq"
                href="/election/1/jurisdiction/jurisdiction-id-3"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Three
                </span>
              </button>
            </div>
            <div>
              <h2>
                Jurisdictions - 
                audit two
              </h2>
              <button
                class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-cIShpX iRnxMq"
                href="/election/2/jurisdiction/jurisdiction-id-2"
                type="button"
              >
                <span
                  class="bp3-button-text"
                >
                  Jurisdiction Two
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/audit-board/:auditBoardId renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-hEsumM cWAYk"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders aa logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat cBZqYS"
    >
      <div
        class="sc-bxivhb hMnACT"
      >
        <div
          style="width: 50%;"
        >
          <div
            class="sc-ktHwxA bRARec"
          >
            <div>
              <h2>
                Audits - 
                State of California
              </h2>
              <p>
                You haven't created any audits yet for 
                State of California
              </p>
            </div>
          </div>
        </div>
        <div
          style="width: 50%;"
        >
          <div
            class="sc-kafWEX hSEaCR"
          >
            <h2>
              New Audit
            </h2>
            <div
              class="sc-jTzLTM hPHXqn"
            />
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <label
                for="auditName"
              >
                <p>
                  Audit name
                </p>
                <div
                  class="sc-iELTvK dsVrZo sc-kAzzGY bLtYsq"
                >
                  <div
                    class="bp3-input-group sc-chPdSV PhUsl"
                  >
                    <input
                      class="bp3-input"
                      id="auditName"
                      name="auditName"
                      style="padding-right: 10px;"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </label>
            </div>
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <label
                for="auditType"
              >
                <p>
                  Audit type
                </p>
                <div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      checked=""
                      name="auditType"
                      type="radio"
                      value="BALLOT_POLLING"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Polling
                  </label>
                  <div
                    class="sc-feJyhm jdmEfO"
                  >
                    <label
                      for="auditMathType"
                    >
                      <p>
                        Ballot polling type
                      </p>
                      <div>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            checked=""
                            name="auditMathType"
                            type="radio"
                            value="BRAVO"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          BRAVO
                        </label>
                        <label
                          class="bp3-control bp3-radio"
                        >
                          <input
                            name="auditMathType"
                            type="radio"
                            value="MINERVA"
                          />
                          <span
                            class="bp3-control-indicator"
                          />
                          Minerva (Not recommended)
                        </label>
                      </div>
                    </label>
                  </div>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BATCH_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Batch Comparison
                  </label>
                  <label
                    class="bp3-control bp3-radio"
                  >
                    <input
                      name="auditType"
                      type="radio"
                      value="BALLOT_COMPARISON"
                    />
                    <span
                      class="bp3-control-indicator"
                    />
                    Ballot Comparison
                  </label>
                </div>
              </label>
            </div>
            <button
              class="bp3-button bp3-fill bp3-large bp3-intent-primary sc-bwzfXH eBfcXh"
              type="button"
            >
              <span
                class="bp3-button-text"
              >
                Create Audit
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders ja logged in properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
          <div
            class="bp3-navbar-heading"
          >
            Jurisdiction: Jurisdiction One
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
          <button
            class="bp3-button bp3-small sc-bwzfXH eBfcXh"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              Log out
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="sc-htpNat cBZqYS"
    >
      <div
        class="bp3-callout sc-brqgnP jodPLw"
      >
        <div
          class="sc-bxivhb hMnACT"
        >
          <div
            class="text"
          >
            <h4
              class="bp3-heading"
            >
              The audit has not started.
            </h4>
            <p>
              0/2 files successfully uploaded.
            </p>
          </div>
        </div>
      </div>
      <div
        class="sc-bxivhb sc-TOsTZ dNNkJG"
      >
        <h2
          class="bp3-heading sc-gzVnrw hQaoin"
        >
          Audit Source Data
        </h2>
        <form>
          <div
            class="sc-dnqmqq kymPuI"
          >
            <h2
              class="bp3-heading sc-gzVnrw hQaoin"
            />
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <h4
                class="bp3-heading"
              >
                Ballot Manifest
              </h4>
              <div
                class="sc-fjdhpX kBSvWX"
              >
                Click "Browse" to choose the appropriate Ballot Manifest file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many ballot cards (individual pieces of paper) are stored in each container.
                <br />
                <br />
                <a
                  href="/sample_ballot_manifest.csv"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  (Click here to view a sample file in the correct format.)
                </a>
              </div>
            </div>
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <label
                class="bp3-file-input"
              >
                <input
                  accept=".csv"
                  name="csv"
                  type="file"
                />
                <span
                  class="bp3-file-upload-input"
                >
                  Select a CSV...
                </span>
              </label>
            </div>
            <div>
              <button
                class="bp3-button bp3-intent-primary sc-bwzfXH eBfcXh"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Upload File
                </span>
              </button>
            </div>
          </div>
        </form>
        <form>
          <div
            class="sc-dnqmqq kymPuI"
          >
            <h2
              class="bp3-heading sc-gzVnrw hQaoin"
            />
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <h4
                class="bp3-heading"
              >
                Candidate Totals by Batch
              </h4>
              <div
                class="sc-fjdhpX kBSvWX"
              >
                Click "Browse" to choose the appropriate Candidate Totals by Batch file from your computer. This file should be a comma-separated list of all the ballot boxes/containers used to store ballots for this particular election, plus a count of how many votes were counted for each candidate in each of those containers.
                <br />
                <br />
                <a
                  href="/sample_candidate_totals_by_batch.csv"
                  rel="noopener noreferrer"
                  target="_blank"
                >
                  (Click here to view a sample file in the correct format.)
                </a>
              </div>
            </div>
            <div
              class="sc-jTzLTM hPHXqn"
            >
              <label
                class="bp3-file-input bp3-disabled"
              >
                <input
                  accept=".csv"
                  disabled=""
                  name="csv"
                  type="file"
                />
                <span
                  class="bp3-file-upload-input"
                >
                  Select a CSV...
                </span>
              </label>
            </div>
            <div>
              <button
                class="bp3-button bp3-disabled bp3-intent-primary sc-bwzfXH eBfcXh"
                disabled=""
                tabindex="-1"
                type="submit"
              >
                <span
                  class="bp3-button-text"
                >
                  Upload File
                </span>
              </button>
            </div>
          </div>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`App /election/:electionId/jurisdiction/:jurisdictionId renders unauthenticated properly 1`] = `
<div>
  <div
    class="Toastify"
  />
  <div
    class="sc-cmTdod ftrAGQ"
  >
    <div
      class="bp3-navbar sc-EHOje gMcVig"
    >
      <div
        class="sc-bxivhb sc-bZQynM ezCmGO"
      >
        <div
          class="bp3-navbar-group bp3-align-left"
        >
          <div
            class="bp3-navbar-heading"
          >
            <a
              href="/"
            >
              <img
                alt="Arlo, by VotingWorks"
                src="/arlo.png"
              />
            </a>
          </div>
        </div>
        <div
          class="bp3-navbar-group bp3-align-right"
        >
          <div
            class="sc-ifAKCX jNLPyG"
            id="reset-button-wrapper"
          />
        </div>
      </div>
    </div>
    <div
      class="sc-hEsumM cWAYk"
    >
      <img
        alt="Arlo, by VotingWorks"
        height="50px"
        src="/arlo.png"
      />
      <div
        class="bp3-card bp3-elevation-0"
        style="margin: 25px 0px 15px 0px;"
      >
        <p>
          Participating in an audit in your local jurisdiction?
        </p>
        <a
          class="bp3-button bp3-large bp3-intent-primary"
          href="/auth/jurisdictionadmin/start"
          role="button"
          tabindex="0"
        >
          <span
            class="bp3-button-text"
          >
            Log in to your audit
          </span>
        </a>
      </div>
      <div>
        <p>
          State-level audit administrators:
           
          <a
            href="/auth/auditadmin/start"
          >
            Log in as an admin
          </a>
        </p>
      </div>
    </div>
  </div>
</div>
`;
